2008-02-07  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.c: Fixed two declarations in the middle
	of a block that were causing compile problems on old
	compilers. (#515053, reported by Kazuki IWAMOTO)

2008-02-06  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkevents-win32.c: Check if the window is a temp window,
	otherwise things get wonky when you click on a menu.  This fixes
	a regression caused in #505928.  Thanks to Tor for spotting this
	one!  (#514789)

2008-02-05  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

        * gdk/win32/gdkwindow-win32.c (_gdk_modal_current): Walk
	down the stack until we get to a window that is mapped.
	Otherwise hiding a window will cause all windows in the app
	to be blocked. (#514643)
	
2008-02-05  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkevents-win32.c
	* gdk/win32/gdkwindow-win32.c
	* gdk/win32/gdkwindow-win32.h
	* gdk/win32/gdkwin32.h:
	Modal window rework.  (#455627 and #511111)

2008-02-05  Cody Russell  <bratsche@gnome.org>

	Merge from trunk:

	* gdk/win32/gdkevents-win32.c:
	Refactored some of the window hiding/showing code from
	WM_ACTIVATE to WM_SIZE and WM_SYSCOMMAND.  Having this
	under WM_ACTIVATE was causing the application to go into
	a weird state when the user right-clicked on the taskbar
	entry of a window that was minimized.  (#505928)

2008-02-05  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkwindow-win32.c: (gdk_window_set_transient_for),
	Properly ref/unref windows and parents.  (#506769)

2008-02-05  Cody Russell  <bratsche@gnome.org>

        Merged from trunk:

	* gdk/win32/gdkevents-win32.c (show_window_recurse): Check that
	the window is mapped before setting SW_RESTORE or SW_MINIMIZE.
	Fixes a regression caused by #164537 patch where transient
	windows that are hidden get shown (incorrectly) when their