@@ -1361,9 +1361,16 @@ show_window_recurse (GdkWindow *window, gboolean hide_window)
       if (GDK_WINDOW_IS_MAPPED (window))
 	{
 	  if (!hide_window)
-	    ShowWindow (GDK_WINDOW_HWND (window), SW_RESTORE);
+	    {
+	      if (GDK_WINDOW_OBJECT (window)->state & GDK_WINDOW_STATE_ICONIFIED)
+		{
+		  ShowWindow (GDK_WINDOW_HWND (window), SW_RESTORE);
+		}
+	    }
 	  else
-	    ShowWindow (GDK_WINDOW_HWND (window), SW_MINIMIZE);
+	    {
+	      ShowWindow (GDK_WINDOW_HWND (window), SW_MINIMIZE);
+	    }
 	}
 
       impl->changing_state = FALSE;
